revise JAVA_OPTS settings - force use of -XX:+UseCompressedClassPointers -XX:+UseCompressedOops (should be default anyway) - add -Djava.net.preferIPv4Stack=true - add GC logging to /home/vcap/logs/gc.log